post-process/tests/snapshots/mention__invalid_mention@invalid_3.snap
---
source: post-process/tests/mention.rs
expression: "PostParser::parse(Rule::post, &mention).unwrap()"
input_file: post-process/tests/input/mention/invalid_3
---
[
    Pair {
        rule: text,
        span: Span {
            str: "@test@hello.world@tes hello",
            start: 0,
            end: 27,
        },
        inner: [],
    },
]
