post-process/tests/snapshots/mention__invalid_mention@invalid_5.snap
---
source: post-process/tests/mention.rs
expression: "PostParser::parse(Rule::post, &mention).unwrap()"
input_file: post-process/tests/input/mention/invalid_5
---
[
    Pair {
        rule: text,
        span: Span {
            str: "@test@hel\\lo.world",
            start: 0,
            end: 18,
        },
        inner: [],
    },
]
